Overflow fix (again)

--- a/assets/content.css
+++ b/assets/content.css
@@ -30,5 +30,5 @@ div.highlight, .math-box {
 }
 
 div.highlight, .math-box {
-    overflow-x: auto;
+    overflow-x: scroll;
 }
